--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: gen_deviceid_plugin
 description: generate a unique deviceid for android
-version: 0.0.1
-author:
-homepage:
+version: 0.0.2
+author: niuqun <guqung6@gmail.com>
+homepage: https://github.com/guqun/gen_deviceid_plugin
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
